--- a/Puzzles/Puzzles.csproj
+++ b/Puzzles/Puzzles.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.6.0" />
         <PackageReference Include="NUnit" Version="3.10.0" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.1.0" />
     </ItemGroup>
